# pi-inspector

./: mcp.example.json  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: copilot-instructions.md  instructor-guide.md  mcp-first-proposal.md
extensions/pi-inspector/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/pi-inspector/src/: extension.ts
scripts/: mcp_roundtrip.py
src/inspector_raspi/: __init__.py  __main__.py  cli.py  mcp_allinone.py  mcp_server.py  mcp_standalone.py  openapi.json  selftest.py
tests/: test_app.py  test_mcp_stdio.py
