[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspector-raspi"
version = "0.1.0"
description = "Local-only Raspberry Pi environment inspector API for Copilot Agent integrations"
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "mcfuzzysquirrel" }
]
dependencies = [
	"flask",
	"psutil",
]

[project.urls]
Homepage = "https://github.com/mcfuzzysquirrel/pi-inspector"

[project.scripts]
inspector-raspi = "inspector_raspi:main"
inspector-raspi-mcp = "inspector_raspi.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
