[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspector-raspi"
version = "0.1.1"
description = "Local-only Raspberry Pi environment inspector API for Copilot Agent integrations"
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "mcfuzzysquirrel" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mcfuzzysquirrel/pi-inspector"

[project.scripts]
raspi-mcp = "inspector_raspi.mcp_standalone:main"
raspi-capabilities = "inspector_raspi.cli:capabilities_cmd"
raspi-mcp-selftest = "inspector_raspi.selftest:main"

[tool.setuptools.packages.find]
where = ["src"]
